Self service explicitly mentioned in layout in absence of any design.

--- a/src/module/OlcsSelfserve/view/index/index.phtml
+++ b/src/module/OlcsSelfserve/view/index/index.phtml
@@ -1,13 +1,7 @@
 <div>
-<div class="col-md-4"><h1><span data-toggle="tooltip" data-trigger="click" data-html="true" class="ttips"  title="
-    <?php //echo $this->tooltipHelper(array('Start date' => '03.07.2013',
-                                                                        //'Review date' => '04.07.2013',
-                                                                        //'End date' => '05.07.2013',
-                                                                        //'Fabs ref' => '2934567'),
-                                                                        //'AddInfo'); 
-    ?>
-">OLCS Dashboard</span></h1><div>
-        <div class="col-md-4" style="margin-bottom:100px"><a href="/search">Search</a></div>
-        <div class="col-md-4" style="margin-bottom:100px"><a href="/application/new">New Application</a></div>
-                <div class="clearfix"></div>
+    <div class="col-md-4">
+        <h1><span data-toggle="tooltip" data-trigger="click" data-html="true" class="ttips"  title="">OLCS Self-Service</span></h1>
+        <div>
+            <div class="col-md-4" style="margin-bottom:100px"><a href="/selfserve/new">New Application</a></div>
+            <div class="clearfix"></div>
     
