--- a/src/module/OlcsSelfserve/view/layout/layout.phtml
+++ b/src/module/OlcsSelfserve/view/layout/layout.phtml
@@ -37,7 +37,7 @@
         <nav class="navbar navbar-inverse" role="navigation">
             <div class="container">
                 <a href="/">
-                    <h2><strong>O</strong>perator <strong>L</strong>icensing &amp; <strong>C</strong>ompliance <strong>S</strong>ystem</h2>
+                    <h2><strong>O</strong>perator <strong>L</strong>icensing &amp; <strong>C</strong>ompliance <strong>S</strong>ystem <strong>S</strong>elf <strong>S</strong>ervice</h2>
                 </a>
             </div>
         </nav>
