Added link to licence type page and added title attributes

--- a/src/module/OlcsSelfserve/view/layout/layout.phtml
+++ b/src/module/OlcsSelfserve/view/layout/layout.phtml
@@ -37,16 +37,16 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#"><?php echo $this->resourceHelper('progress-bar-applicant-details');?></a></li>
-                <li><a href="#"><?php echo $this->resourceHelper('progress-bar-type-of-licence');?></a></li>
-                <li><a href="#"><?php echo $this->resourceHelper('progress-bar-your-business');?></a></li>
-                <li><a href="#"><?php echo $this->resourceHelper('progress-bar-operating-centres');?></a></li>
-                <li><a href="#"><?php echo $this->resourceHelper('progress-bar-trnsport-managers');?></a></li>
-                <li><a href="#"><?php echo $this->resourceHelper('progress-bar-vehicles-safety');?></a></li>
-                <li><a href="#"><?php echo $this->resourceHelper('progress-bar-previous-history');?></a></li>
-                <li><a href="#"><?php echo $this->resourceHelper('progress-bar-declaration');?></a></li>
-                <li><a href="#"><?php echo $this->resourceHelper('progress-bar-payment');?></a></li>
-                <li><a href="#"><?php echo $this->resourceHelper('progress-bar-summary');?></a></li>
+                <li><a href="/selfserve/licence-type" title="<?php echo $this->resourceHelper('progress-bar-applicant-details');?>"><?php echo $this->resourceHelper('progress-bar-applicant-details');?></a></li>
+                <li><a href="#" title="<?php echo $this->resourceHelper('progress-bar-type-of-licence');?>"><?php echo $this->resourceHelper('progress-bar-type-of-licence');?></a></li>
+                <li><a href="#" title="<?php echo $this->resourceHelper('progress-bar-your-business');?>"><?php echo $this->resourceHelper('progress-bar-your-business');?></a></li>
+                <li><a href="#" title="<?php echo $this->resourceHelper('progress-bar-operating-centres');?>"><?php echo $this->resourceHelper('progress-bar-operating-centres');?></a></li>
+                <li><a href="#" title="<?php echo $this->resourceHelper('progress-bar-trnsport-managers');?>"><?php echo $this->resourceHelper('progress-bar-trnsport-managers');?></a></li>
+                <li><a href="#" title="<?php echo $this->resourceHelper('progress-bar-vehicles-safety');?>"><?php echo $this->resourceHelper('progress-bar-vehicles-safety');?></a></li>
+                <li><a href="#" title="<?php echo $this->resourceHelper('progress-bar-previous-history');?>"><?php echo $this->resourceHelper('progress-bar-previous-history');?></a></li>
+                <li><a href="#" title="<?php echo $this->resourceHelper('progress-bar-declaration');?>"><?php echo $this->resourceHelper('progress-bar-declaration');?></a></li>
+                <li><a href="#" title="<?php echo $this->resourceHelper('progress-bar-payment');?>"><?php echo $this->resourceHelper('progress-bar-payment');?></a></li>
+                <li><a href="#" title="<?php echo $this->resourceHelper('progress-bar-summary');?>"><?php echo $this->resourceHelper('progress-bar-summary');?></a></li>
 
             </ul>
         </nav>
