Modified controller and view routes to prepend “selfserve” Added translations for entity types Added entityTypes and countries array to parent OlcsForm

--- a/src/module/OlcsSelfserve/view/selfserve/application/forms/business-details-form.phtml
+++ b/src/module/OlcsSelfserve/view/selfserve/application/forms/business-details-form.phtml
@@ -5,7 +5,7 @@
             <?php echo $this->resourceHelper('your-business-type-of-business-header'); ?>
         </div>
         
-        <?php echo $this->formRow($businessDetailsForm->get('business[entityTypes]')); ?>
+        <?php echo $this->formRow($this->businessDetailsForm->get('business[entityTypes]')); ?>
         
         <div>
             <?php echo $this->resourceHelper('your-business-company-details-header'); ?>
