--- a/src/module/OlcsSelfserve/view/selfserve/application/business-details.phtml
+++ b/src/module/OlcsSelfserve/view/selfserve/application/business-details.phtml
@@ -10,8 +10,8 @@ $this->placeholder('body-class')->set("full-page");
 <div id="businessDetailsDiv" class="row">
 
 <?php
-    echo $this->partial('application/forms/business-details-form', array(
-        
+    echo $this->partial('selfserve/application/forms/business-details-form', array(
+        'businessDetailsForm' => $businessDetailsForm
     ));
     
 ?>
