--- a/src/module/OlcsSelfserve/view/selfserve/application/business-details.phtml
+++ b/src/module/OlcsSelfserve/view/selfserve/application/business-details.phtml
@@ -4,7 +4,7 @@ $this->placeholder('body-class')->set("full-page");
 ?>
 <?php $businessDetailsForm->prepare(); ?>
 
-<?php //echo $this->partial('OlcsSelfserve/common/errorMessages', array('messages' => $messages)); ?>
+<?php echo $this->partial('common/errorMessages', array('messages' => $messages)); ?>
 <?php echo $this->form()->openTag($businessDetailsForm); ?>
 
 <div id="businessDetailsDiv" class="row">
@@ -16,8 +16,9 @@ $this->placeholder('body-class')->set("full-page");
     
 ?>
     <div class="form-group">
-        <button id="cancelbutton" name="cancel" class="btn btn-cancel" type="button"><?php echo $this->resourceHelper('cancel'); ?></button>
-        <button id="submitbutton" name="submit" class="btn btn-success btn-save pull-right"><?php echo $this->resourceHelper('save'); ?></button>
+        
+        <button id="cancelbutton" name="cancel" class="btn btn-cancel" type="button"><?php echo $this->resourceHelper('common-button-cancel'); ?></button>
+        <button id="submitbutton" name="submit" class="btn btn-success btn-save pull-right"><?php echo $this->resourceHelper('common-button-save-and-next'); ?></button>
     </div>
 </div>
 <?php echo $this->form()->closeTag(); ?>
