Separated off Javascript for show/hide as per OLCS-1024

--- a/src/module/OlcsSelfserve/view/selfserve/application/licenceType.phtml
+++ b/src/module/OlcsSelfserve/view/selfserve/application/licenceType.phtml
@@ -1,3 +1,6 @@
+<?php $this->headScript()->prependFile($this->basePath() . '/js/selfserve/application/licenceType.js'); ?>
+
+
 <?php $licenceTypeForm->prepare(); ?>
 <?php echo $this->form()->openTag($licenceTypeForm); ?>
 <div class="row">
@@ -32,7 +35,9 @@
             <?php echo $this->formRow($licenceTypeForm->get('operatorLocation')); ?>
         </div>
     </div>
+</div>
 
+<div id="operatorTypeSection" class="default-hidden">
     <div class="form-group required">
         <label for="operatorLocation" class="col-lg-3 control-label"><?php echo $this->resourceHelper('which-operator-type'); ?></label>
         <div class="licenceTypeBlock radio-block col-lg-4 itext">
@@ -41,26 +46,32 @@
     </div>
 </div>
 
-<div class="row">
-    <div class="col-md-12 tFormHeader">
-        <div class="pheading"><h2><?php
-            echo $this->resourceHelper('type-of-licence');
-        ?></h2></div>
+<div id="licenceTypeSection" class="default-hidden">
+    <div class="row">
+        <div class="col-md-12 tFormHeader">
+            <div class="pheading"><h2><?php
+                echo $this->resourceHelper('type-of-licence');
+            ?></h2></div>
+        </div>
+    </div>
+
+    <div>
+        <div class="form-group required">
+            <label for="licenceTypes" class="col-lg-3 control-label"><?php echo $this->resourceHelper('which-licence-type'); ?></label>
+            <div class="licenceTypeBlock radio-block col-lg-4 itext">
+                <?php echo $this->formRow($licenceTypeForm->get('licenceTypes')); ?>
+            </div>
+        </div>
     </div>
 </div>
 
 <div>
-    <div class="form-group required">
-        <label for="licenceTypes" class="col-lg-3 control-label"><?php echo $this->resourceHelper('which-licence-type'); ?></label>
-        <div class="licenceTypeBlock radio-block col-lg-4 itext">
-            <?php echo $this->formRow($licenceTypeForm->get('licenceTypes')); ?>
-        </div>
-    </div>
-
     <div class="form-group">
 <?php echo $this->formButton($licenceTypeForm->get('back'), $this->resourceHelper('back')); ?>
 <?php echo $this->formButton($licenceTypeForm->get('exit'), $this->resourceHelper('exit')); ?>
 <?php echo $this->formButton($licenceTypeForm->get('savenext'), $this->resourceHelper('savenext')); ?>
     </div>
+
+    <div class='clear-both'></div>
 </div>
 <?php echo $this->form()->closeTag(); ?>
