--- a/src/module/OlcsSelfserve/view/selfserve/application/licenceType.phtml
+++ b/src/module/OlcsSelfserve/view/selfserve/application/licenceType.phtml
@@ -39,7 +39,7 @@
 
 <div id="operatorTypeSection" class="default-hidden">
     <div class="form-group required">
-        <label for="operatorLocation" class="col-lg-3 control-label"><?php echo $this->resourceHelper('which-operator-type'); ?></label>
+        <label for="operatorType" class="col-lg-3 control-label"><?php echo $this->resourceHelper('which-operator-type'); ?></label>
         <div class="licenceTypeBlock radio-block col-lg-4 itext">
             <?php echo $this->formRow($licenceTypeForm->get('operatorType')); ?>
         </div>
@@ -57,9 +57,9 @@
 
     <div>
         <div class="form-group required">
-            <label for="licenceTypes" class="col-lg-3 control-label"><?php echo $this->resourceHelper('which-licence-type'); ?></label>
+            <label for="licenceType" class="col-lg-3 control-label"><?php echo $this->resourceHelper('which-licence-type'); ?></label>
             <div class="licenceTypeBlock radio-block col-lg-4 itext">
-                <?php echo $this->formRow($licenceTypeForm->get('licenceTypes')); ?>
+                <?php echo $this->formRow($licenceTypeForm->get('licenceType')); ?>
             </div>
         </div>
     </div>
