--- a/src/module/OlcsSelfserve/view/index/index.phtml
+++ b/src/module/OlcsSelfserve/view/index/index.phtml
@@ -2,7 +2,7 @@
     <div class="col-md-4">
         <h1><span data-toggle="tooltip" data-trigger="click" data-html="true" class="ttips"  title="">OLCS Self-Service</span></h1>
         <div>
-            <div class="col-md-4"><a href="/selfserve/new">New Application</a></div>
+            <div class="col-md-4"><a href="/selfserve/licence-type">New Application</a></div>
         </div>
     </div>
 </div>
