--- a/src/module/OlcsSelfserve/view/selfserve/application/businessDetails.phtml
+++ b/src/module/OlcsSelfserve/view/selfserve/application/businessDetails.phtml
@@ -1,4 +1,5 @@
 <?php 
+$this->headScript()->prependFile($this->basePath() . '/js/selfserve/application/businessDetails.js');
 $this->placeholder('body-class')->set("full-page");
 ?>
 <?php
@@ -25,4 +26,4 @@ $this->placeholder('body-class')->set("full-page");
         <button id="submitbutton" name="submit" class="btn btn-success btn-save pull-right"><?php echo $this->resourceHelper('common-button-save-and-next'); ?></button>
     </div>
 </div>
-<?php echo $this->form()->closeTag(); ?>
+<?php echo $this->form()->closeTag(); ?>    
