--- a/src/module/OlcsSelfserve/view/selfserve/application/business-details.phtml
+++ b/src/module/OlcsSelfserve/view/selfserve/application/business-details.phtml
@@ -15,14 +15,20 @@ $this->placeholder('body-class')->set("full-page");
 
 <?php
     echo $this->partial('selfserve/application/forms/business-details-form', array(
-        'businessDetailsForm' => $businessDetailsForm
+        'businessDetailsForm' => $businessDetailsForm,
+        'licence' => $licence
     ));
     
 ?>
+    
+<div>
     <div class="form-group">
-        
-        <button id="cancelbutton" name="cancel" class="btn btn-cancel" type="button"><?php echo $this->resourceHelper('common-button-cancel'); ?></button>
-        <button id="submitbutton" name="submit" class="btn btn-success btn-save pull-right"><?php echo $this->resourceHelper('common-button-save-and-next'); ?></button>
+<?php echo $this->formButton($businessDetailsForm->get('back'), $this->resourceHelper('back')); ?>
+<?php echo $this->formButton($businessDetailsForm->get('exit'), $this->resourceHelper('exit')); ?>
+<?php echo $this->formButton($businessDetailsForm->get('savenext'), $this->resourceHelper('savenext')); ?>
     </div>
+
+    <div class='clear-both'></div>
 </div>
-<?php echo $this->form()->closeTag(); ?>
+<?php echo $this->form()->closeTag(); ?>    
+
