Changed reference to licence to come from application object Altered label on trading type input

--- a/src/module/OlcsSelfserve/view/selfserve/application/business-details.phtml
+++ b/src/module/OlcsSelfserve/view/selfserve/application/business-details.phtml
@@ -16,7 +16,8 @@ $this->placeholder('body-class')->set("full-page");
 <?php
     echo $this->partial('selfserve/application/forms/business-details-form', array(
         'businessDetailsForm' => $businessDetailsForm,
-        'licence' => $licence
+        'licence' => $licence,
+        'application' => $application
     ));
     
 ?>
